--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/pycharm,venv,windows,macos,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,venv,windows,macos,visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/pycharm,venv,windows,macos,visualstudiocode,virtualenv
+# Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,venv,windows,macos,visualstudiocode,virtualenv
 
 ### macOS ###
 # General
@@ -161,6 +161,10 @@ pyvenv.cfg
 .venv
 pip-selfcheck.json
 
+### VirtualEnv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -206,4 +210,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/pycharm,venv,windows,macos,visualstudiocode
+# End of https://www.toptal.com/developers/gitignore/api/pycharm,venv,windows,macos,visualstudiocode,virtualenv
