--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,venv,windows,macos,visualstudiocode,virtualenv
+/.env
